<resources>
    <string name="app_name">PhotoFamily</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_password">password</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_new_account">Create New Account</string>
    <string name="label_keep_signed_in">Keep me signed in</string>
    <string name="btn_exit">exit</string>
    <string name="btn_create_album">Create Album</string>
    <string name="btn_cancel">Cancel</string>
    <string name="hint_album_name">Album\'s name</string>
    <string name="hint_date">Event\'s date</string>
    <string name="hint_location">Event\'s location</string>
    <string name="btn_go_to_comments">Go to\ncomments</string>
    <string name="btn_send">Send</string>
</resources>
