<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/welcome"
        android:adjustViewBounds="true"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_person_outline_black_18dp"
        android:drawablePadding="8dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_black_18dp"
        android:drawablePadding="8dp"/>

    <Button
        android:id="@+id/login"
        android:text="@string/btn_login"
        android:layout_width="300dp"

        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/createNewAccount"
        android:text="@string/btn_create_new_account"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/label_keep_signed_in"/>

</LinearLayout>