<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="36dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_album_name"
            android:drawableLeft="@drawable/ic_camera_alt_black_18dp"
            android:drawablePadding="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            android:drawableLeft="@drawable/ic_perm_contact_calendar_black_18dp"
            android:drawablePadding="8dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_location"
            android:drawableLeft="@drawable/ic_group_work_black_18dp"
            android:drawablePadding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_create_album"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/btn_create_album"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/btn_cancel"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>